--- a/site/guide/templates/_customize-documentation-templates.qmd
+++ b/site/guide/templates/_customize-documentation-templates.qmd
@@ -1,7 +1,7 @@
 :::: {.content-visible unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-1. Under Workplace Settings, select **Templates**.
+1. Under Documents, select **Templates**.
 
 1. Select one of the tabs for the type of template you want to edit: 
 
@@ -48,7 +48,7 @@ Customize {{< var vm.product >}}'s templates for model documentation, validation
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-1. Under Workplace Settings, select **Templates**.
+1. Under Documents, select **Templates**.
 
 1. Select one of the tabs for the type of template you want to edit: 
 
