--- a/site/guide/templates/customize-documentation-templates.qmd
+++ b/site/guide/templates/customize-documentation-templates.qmd
@@ -40,7 +40,7 @@ To add guidelines to your template, edit the YAML template directly.
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under Workplace Settings, select **Templates**.
+2. Under Documents, select **Templates**.
 
 3. Select one of the tabs for the type of template you want to edit: 
 
