--- a/site/guide/templates/manage-text-block-library.qmd
+++ b/site/guide/templates/manage-text-block-library.qmd
@@ -52,7 +52,7 @@ To modify an existing text block in your block library:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workplace Settings, select **Block Library**.
+2. Under Documents, select **Block Library**.
 
 3. To the right of the text block you want to edit, click **{{< fa ellipsis-vertical >}}** and select **Edit Details**.
 
@@ -75,7 +75,7 @@ To remove an existing text block from your block library:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workplace Settings, select **Block Library**.
+2. Under Documents, select **Block Library**.
 
 3. To the right of the text block you want to remove, click **{{< fa ellipsis-vertical >}}** and select **[{{< fa trash-can >}} Delete Text Block]{.red}**.
 
