--- a/site/guide/templates/_duplicate-template.qmd
+++ b/site/guide/templates/_duplicate-template.qmd
@@ -3,7 +3,7 @@ To duplicate an existing template and start with version one of that new templat
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under Workplace Settings, select **Templates**.
+2. Under Documents, select **Templates**.
 
 3. Select one of the tabs for the type of template you want to duplicate: 
 
@@ -29,7 +29,7 @@ To duplicate an existing template and start with version one of that new templat
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under Workplace Settings, select **Templates**.
+2. Under Documents, select **Templates**.
 
 3. Select one of the tabs for the type of template you want to duplicate: 
 
