--- a/site/guide/templates/_duplicate-text-blocks.qmd
+++ b/site/guide/templates/_duplicate-text-blocks.qmd
@@ -2,7 +2,7 @@ To make a copy of an existing text block in your block library:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workplace Settings, select **Block Library**.
+1. Under Documents, select **Block Library**.
 
 1. To the right of the text block you want to edit, click **{{< fa ellipsis-vertical >}}** and select **Duplicate Text Block**.
 
