Fixing wrong links

--- a/site/guide/model-workflows/_configure-workflow-steps.qmd
+++ b/site/guide/model-workflows/_configure-workflow-steps.qmd
@@ -17,7 +17,7 @@ To add or edit workflow steps:
 1. After you've configured a step, you can then [link your workflow together](/guide/model-workflows/configure-custom-workflows.qmd#link-workflow-together).
 
 ::: {.callout}
-Refer to [Available step types](/guide/model-workflows/configure-custom-workflows.qmd#available-step-types) for information on available step types and details on how to set up conditional requirements.
+Refer to [Available step types](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types) for information on available step types and details on how to set up conditional requirements.
 :::
 
 ::::
