--- a/site/guide/model-workflows/work-with-model-workflows.qmd
+++ b/site/guide/model-workflows/work-with-model-workflows.qmd
@@ -1,16 +1,6 @@
 ---
 title: "Work with model workflows"
 date: last-modified
-listing:
-  - id: model-workflows-listing
-    type: grid
-    grid-columns: 2
-    max-description-length: 250
-    sort: false
-    fields: [title, description]
-    contents:
-    - manage-model-stages.qmd
-    - configure-custom-workflows.qmd
 aliases:
   - /guide/working-with-model-workflows.html
   - working-with-model-workflows.html
@@ -64,15 +54,13 @@ If you need to reset your model's workflow to the beginning:
 
 4. Select **Reset Workflow**.
 
-    After you confirm, that model's workflow will be returned to its initial state. 
+    After you confirm, that model's workflow will be returned to its initial state.
 
 ![Resetting a workflow to its initial state](reset-workflow.gif){fig-alt="A gif showing resetting a workflow to its initial state" .screenshot width=90%}
 
 ## What's next
 
-:::{#model-workflows-listing}
-:::
-
+- [Submit for approval](/guides/model-documentation/submit-for-approval.qmd)
 
 
 <!-- FOOTNOTES -->
@@ -81,7 +69,7 @@ If you need to reset your model's workflow to the beginning:
 
 [^2]: [Manage model stages](manage-model-stages.qmd)
 
-[^3]: [Working with model workflows](configure-custom-workflows.qmd)
+[^3]: [Configure custom workflows](configure-custom-workflows.qmd)
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
