--- a/site/training/program/training-faq.qmd
+++ b/site/training/program/training-faq.qmd
@@ -18,7 +18,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa book-open >}} docs](https://docs.validmind.ai/guide/model-inventory/managing-model-inventory.html){.button-small target="blank"}
+[{{< fa book-open >}} docs](/guide/model-inventory/managing-model-inventory.qmd){.button-small}
 :::
 
 ::::
