--- a/site/index.qmd
+++ b/site/index.qmd
@@ -7,31 +7,86 @@ resources:
   - assets/**
 filters:
     - tachyons
+listing:
+  - id: admin
+    type: grid
+    grid-columns: 1
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents:
+    - /guide/configuration/accessing-validmind.qmd
+    - /guide/configuration/managing-your-organization.qmd
+    - /guide/configuration/managing-users.qmd
+  - id: developer
+    type: grid
+    grid-columns: 1
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents:
+    - /developer/validmind-library.qmd
+    - /developer/supported-models.qmd
+    - /developer/samples-jupyter-notebooks.qmd
+  - id: validator
+    type: grid
+    grid-columns: 1
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents:
+    - /guide/model-validation/preparing-validation-reports.qmd
+    - /guide/model-validation/working-with-model-findings.qmd
+    - /guide/reporting/working-with-analytics.qmd
+  - id: releases
+    type: grid
+    grid-columns: 3
+    max-description-length: 150
+    sort: false
+    fields: [title, subtitle, description]
+    contents:
+    # MAKE-RELEASE-NOTES-LATEST-MARKER
+      - /releases/2025/2025-apr-24/release-notes.qmd
+      - /releases/2025/2025-mar-07/release-notes.qmd
+      - /releases/2025/2025-jan-31/release-notes.qmd
+    # MAKE-RELEASE-NOTES-OLDEST-MARKER
+  - id: validmind-academy
+    type: grid
+    image-height: 200px
+    sort: false
+    contents:
+    - path: training/administrator-fundamentals/administrator-fundamentals-register.qmd
+      image: training/administrator-fundamentals/administrator-fundamentals.png
+      title: "Administrator Fundamentals {{< fa gear >}}"
+      subtitle: "Register now {{< fa chevron-right >}}"
+    - path: training/developer-fundamentals/developer-fundamentals-register.qmd
+      title: "Developer Fundamentals {{< fa code >}}"
+      subtitle: "Register now {{< fa chevron-right >}}"
+      image: training/developer-fundamentals/developer-fundamentals.png
+    - path: training/validator-fundamentals/validator-fundamentals-register.qmd
+      image: training/validator-fundamentals/validator-fundamentals.png
+      title: "Validator Fundamentals {{< fa user-check >}}"
+      subtitle: "Register now {{< fa chevron-right >}}"
+    fields: [image, title, subtitle]
 ---
 
 ```{=html}
 <style>
-/* Link styles */
 a {
-  color: #083E44;
+  color: #DE257E;
   text-decoration: none;
-  font-weight: bold;
 }
 
 a:hover {
+  /* color: #DE257E; */
   text-decoration: none;
 }
-.quarto-content {
-  background-color: #EDF9FA;
-}
 
-/* Card hover */
 .card:hover {
   border: 1px solid #083E44;
-  background-color: #EDF9FA;
+  background-color: #F9F9F9;
 }
 
-/* Searchbox styles */
 #searchbox {
   max-width: 100%;
   padding: 10px;
@@ -61,7 +116,7 @@ a:hover {
 }
 
 #hits div:hover {
-  background-color: #EAF8FA;
+  background-color: #EAF8FA;   /* Light green background for the entire search result on hover */
 }
 
 #hits a strong {
@@ -74,39 +129,6 @@ a:hover {
   text-decoration: none;
 }
 
-/* Gradient background container */
-.column-screen {
-  /* background: linear-gradient(to bottom, #EDF9FA 80%, #ffffff); */
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;     /* allows the content to expand */
-  height: auto;         /* prevents clipping below */
-  width: 100vw;
-  position: relative;
-  top: 0;
-  left: 0;
-  z-index: 0; 
-}
-/*to fix white gap at the top*/
-.quarto-container,
-.page-columns,
-.page-layout,
-body,
-html {
-  background: linear-gradient(to bottom, #EDF9FA 80%, #ffffff);
-}
-
-
-/* color of the text on homepage */
-.light-text {
-  color: #585F60; /* or #555, adjust to taste for brightness */
-}
-.tour-text-container {
-  max-width: 500px;
-  margin: 0 auto;
-  font-size: 1.15rem;
-  line-height: 1.7;
-}
 </style>
 ```
 
@@ -123,16 +145,259 @@ html {
 ::: {.w-60-ns}
 
 <!-- Add a search box to home page-->
-<div class="search-wrapper">
-  <span class="search-icon"></span>
-  <input id="searchbox" type="text" placeholder="🔍 What are you looking for?" />
-  <!-- <span class="search-shortcut">/</span> -->
-</div>
+<input id="searchbox" placeholder="Ask a question">
 <div id="hits"></div>
 
 <!-- Use Lunr.js as the search library -->
 <script src="https://unpkg.com/lunr/lunr.js"></script>
+
+<!-- Enable custom search functionality-->
 <script src="scripts/validsearch.js"></script>
+
+::: {.tc}
+[quickstart](get-started/developer/try-with-jupyterhub.qmd){.button-pink .cta}
+[open-source software](https://github.com/validmind/validmind-library/){.button-white .cta}
+
+:::
+
+:::
+
+<!-- ::: {.w-40-ns}
+
+::: {.image-container}
+![](assets/img/platform-line-1.png)
+![](assets/img/platform-line-2.png)
+![](assets/img/platform-line-3.png)
+![](assets/img/platform-line-4.png)
+![](assets/img/platform-line-5.png)
+:::
+
+::: -->
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
+::::
+
+:::
+
+<!-- GET STARTED SECTION -->
+
+::: {.column-screen}
+
+:::: {.flex .flex-wrap .justify-around .get-started}
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
+
+::: {.w-25-ns .mb4}
+
+:::: {.ba .b--black-10 .br3 .shadow-4 .bg-white .pt4 .pb3 .h-100 .grow .tc}
+
+:::: {.ph4}
+
+:::: {.navy .f4 .tl}
+[for administrators]{.smallcaps}
+::::
+
+:::{#admin}
+:::
+
+[all user guides](guide/guides.qmd){.button-green .cta}
+
+
+::::
+
+
+:::: 
+
+:::
+
+::: {.w-25-ns .mb4}
+
+:::: {.ba .b--black-10 .br3 .shadow-4 .bg-white .pt4 .pb3 .h-100 .grow .tc}
+
+:::: {.ph4}
+
+:::: {.navy .f4 .tl}
+[for model developers]{.smallcaps}
+::::
+
+:::{#developer}
+:::
+
+[developer reference](/validmind/validmind.qmd){.button-green .cta}
+
+::::
+
+:::: 
+
+:::
+
+::: {.w-25-ns .mb4}
+
+:::: {.ba .b--black-10 .br3 .shadow-4 .bg-white .pt4 .pb3 .h-100 .grow .tc}
+
+:::: {.ph4}
+
+:::: {.navy .f4 .tl}
+[for model validators]{.smallcaps}
+::::
+
+:::{#validator}
+:::
+
+[validation guidelines](guide/model-validation/manage-validation-guidelines.qmd){.button-green .cta}
+
+::::
+
+:::: 
+
+:::
+
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
+::::
+
+:::
+
+<!-- TRAINING SECTION -->
+
+::: {.column-page}
+
+
+:::: {.flex .flex-wrap .justify-around .training}
+
+
+:::: {.f2}
+![](about/ValidMind-logo-color.svg){height=50px} **Academy**
+:::: 
+
+:::: {.f4}
+Gain **hands-on experience** and explore what {{< var vm.product >}} has to offer with our interactive training environment.
+::::
+
+::: {.w-100-ns .content-center .mt2}
+
+:::{#validmind-academy}
+:::
+
+:::
+
+::::
+
+:::
+
+<!-- OVERVIEW SECTION -->
+
+::: {.column-screen}
+
+:::: {.flex .flex-wrap .justify-around .overview}
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
+::: {.w-25-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
+
+![](assets/img/icon-trust.svg)
+
+:::: {.f3}
+[Be]{.pink}**Valid.**
+:::: 
+
+:::: {.f4}
+Accelerate innovation, unlock advanced potential, and deploy with compliance.
+::::
+
+[request a demo](https://validmind.com/contact/){.button-pink .cta}
+
+:::
+
+::: {.w-25-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
+
+![](assets/img/icon-connect.svg)
+
+:::: {.f3}
+Events
+:::: 
+
+:::: {.f4}
+Connect with the {{< var vm.product >}} team at events for the model and AI risk community.
+::::
+
+[find events](https://validmind.com/events/){.button-pink .cta}
+
+:::
+
+::: {.w-25-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
+
+![](assets/img/icon-automate.svg)
+
+:::: {.f3}
+Blog
+:::: 
+
+:::: {.f4}
+Gain insights through our original content on model risk management.
+::::
+
+[read our blog](https://validmind.com/blog/){.button-pink .cta}
+
+:::
+
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
+::::
+
+:::
+
+
+<!-- RELEASES SECTION -->
+
+::: {.column-screen}
+
+:::: {.flex .flex-wrap .justify-around .releases}
+
+::: {.w-10-ns}
+<!-- FILLER COLUMN DO NOT REMOVE -->
+:::
+
+::: {.w-70-ns .mb4}
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-70-ns}
+
+:::: {.f2}
+Latest Releases
+
+::::
+
+:::
+
+::: {.w-30-ns .tr}
+:::: {.f4}
+[[all releases {{< fa chevron-right >}} ](releases/all-releases.qmd)]{.smallcaps}
+
+:::
+
+:::
+
+::::
+
+:::{#releases}
+:::
+
 
 :::
 
@@ -142,72 +407,4 @@ html {
 
 ::::
 
-<!-- CENTERED WHITE BOX WITH FIXED WIDTH & FULL HEIGHT -->
-::: {.center .br3 .shadow-4 .bg-white .pa5 .w-70-ns}
-
-<!-- TOP ROW: Setup + Admin | Model Dev | Model Validation -->
-:::: {.flex .flex-wrap .justify-around .mb5}
-
-::: {.w-25-ns .mb3}
-:::: {.items-start}
-![](/homepage_docsite/setup_icon.svg){.mb3 width="48"}
-::::
-### Setup + Administration
-[Invite users and control access to ValidMind by managing user roles, groups, and permissions.]{.light-text}
-
-[**Setup QuickStart**](/get-started/quickstart-administrator.qmd){.button-green .cta .mt3}
-:::
-
-::: {.w-25-ns .mb3}
-:::: {.items-start}
-![](/homepage_docsite/model_icon.svg){.mb3 width="48"}
-::::
-### Model Development
-[Save time by automating documentation and testing for your models using the ValidMind Library.]{.light-text}
-
-[**Developer quickstart**](/get-started/quickstart-developer.qmd){.button-green .cta .mt3}
-:::
-
-::: {.w-25-ns .mb3}
-:::: {.items-start}
-![](/homepage_docsite/model_valid_icon.svg){.mb3 width="48"}
-::::
-### Model Validation
-[Quickly assess compliance by linking evidence from developers in your validation reports.]{.light-text}
-
-[**Validator QuickStart**](/get-started/quickstart-validator.qmd){.button-green .cta .mt3}
-:::
-::::
-
-<!-- VALIDMIND TOUR -->
-::: {.tour-bg .tc .mt5 .mb5}
-### ValidMind *[Tour]{.pink .normal-weight}*
-[ValidMind is a toolkit that helps identify AI and LLM risks while generating regulatory-compliant model documentation for developers, data scientists, and compliance teams.]{.light-text .tour-text-container}
-
-[**What is ValidMind?**](/training/fake-tour/product-tour.qmd){.button-white .cta .mt3}
-:::
-
-<!-- FINAL ROW: Academy and Latest Release TEXT SIDE-BY-SIDE -->
-:::: {.flex .flex-wrap .justify-around .mt5}
-
-::: {.w-50-ns .pr4}
-### ValidMind [Academy]{.pink .normal-weight}
-[Gain hands-on experience and explore what ValidMind has to offer with our interactive training environment.]{.light-text}
-[**Learn through doing**](/training/training.qmd){.button-white .cta .mt3}
-:::
-
-::: {.w-50-ns .pl4}
-
-### Latest Release  
-![](/homepage_docsite/release_icon.svg){.mb3 width="30"} v1.26.09 / January 24, 2025  
-[We've introduced two new quickstart Jupyter Notebooks dealing with option pricing in the Capital Markets section of our code samples.]{.light-text}
-
-[**View all releases**](/releases/all-releases.qmd)
-:::
-
-:::: 
-
-<!--END of white card -->
-:::
-<!-- CLOSE .column-screen to allow footer to render -->
 :::
