Repurposing working with model workflows

--- a/site/guide/model-workflows/working-with-model-workflows.qmd
+++ b/site/guide/model-workflows/working-with-model-workflows.qmd
@@ -1,12 +1,11 @@
 ---
-title: "Work with model workflows"
+title: "Working with model workflows"
 date: last-modified
 aliases:
   - /guide/working-with-model-workflows.html
-  - working-with-model-workflows.html
 ---
 
-View the status of a model in a workflow, and transition models into the appropriate workflow states.
+Use workflows to transition your models into their appropriate next stages throughout your model lifecycles. Review workflows associated with your models, the current status of a model workflow, and history of a specific workflow applied to a model.
 
 ::: {.attn}
 
