--- a/site/guide/model-inventory/_view-model-activity-overview.qmd
+++ b/site/guide/model-inventory/_view-model-activity-overview.qmd
@@ -2,7 +2,7 @@
 
 :::: {.content-visible unless-format="revealjs"} 
 - Inventory fields updated on the model^[[Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)]
-- Model status transitions^[[Work with model workflows](/guide/model-workflows/work-with-model-workflows.qmd)]
+- Model status transitions^[[Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)]
 - Updates to model documentation, validation reports,^[[Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)] or ongoing monitoring plans^[[Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)]
 - Test results added to your model^[[{{< var validmind.developer >}}](/developer/validmind-library.qmd)]
 - Findings added, updated, or removed^[[Working with model findings](/guide/model-validation/working-with-model-findings.qmd)]
