--- a/site/releases/2025/2025-jan-31/release-notes.qmd
+++ b/site/releases/2025/2025-jan-31/release-notes.qmd
@@ -430,7 +430,7 @@ Labels: enhancement
 Workflows are now easier to read when zoomed out, helped by a larger modal window and simplified nodes:
 
 ::: {.column-margin}
-[Work with model workflows](/guide/model-workflows/work-with-model-workflows.qmd){.button}
+[Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd){.button}
 
 :::
 
