Setup for working with workflows subpages

--- a/site/guide/model-workflows/transition-model-workflows.qmd
+++ b/site/guide/model-workflows/transition-model-workflows.qmd
@@ -2,3 +2,60 @@
 title: "Transition model workflows"
 date: last-modified
 ---
+
+wip
+
+::: {.attn}
+
+## Prerequisites
+
+- [x] {{< var link.login >}}
+- [x] The model is registered in the model inventory.[^1]
+- [x] Model stages have already been customized for use in workflows.[^2]
+- [x] Workflows have already been set up for use with your models.[^3]
+- [x] You are a assigned role with sufficient permissions to transition the workflow into its next state.[^4] 
+
+:::
+
+## Transition workflow states*
+
+::: {.callout-important title="Roles and action visibility"}
+Depending on the configuration of your workflows, you may or may not be able to move a model into another workflow state as actions can be gated to only users of certain roles. 
+
+When all the actions that can be performed by your role are completed for that model at that stage of the workflow, the Actions section will disappear from view. 
+:::
+
+To transition the overall workflow status for a model:
+
+{{< include _model-workflows-transition.qmd >}}
+
+![Transitioning a workflow status under the ACTIONS section](transition-workflow.gif){fig-alt="A gif showing transitioning a workflow status under the ACTIONS section" .screenshot width=90%}
+
+### Reset your model workflow*
+
+If you need to reset your model's workflow to the beginning: 
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.[^5]
+
+3. Click on **[model status]{.smallcaps}**.
+
+4. Select **Reset Workflow**.
+
+    After you confirm, that model's workflow will be returned to its initial state.
+
+![Resetting a workflow to its initial state](reset-workflow.gif){fig-alt="A gif showing resetting a workflow to its initial state" .screenshot width=90%}
+
+
+<!-- FOOTNOTES -->
+
+[^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
+
+[^2]: [Manage model stages](manage-model-stages.qmd)
+
+[^3]: [Configure custom workflows](configure-custom-workflows.qmd)
+
+[^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
