Review model workflows framework

--- a/site/guide/model-workflows/working-with-model-workflows.qmd
+++ b/site/guide/model-workflows/working-with-model-workflows.qmd
@@ -11,11 +11,11 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-    - review-model-workflows.qmd
+    - manage-model-workflows.qmd
     - transition-model-workflows.qmd
 ---
 
-Use workflows to transition your models into their appropriate next stages throughout your model lifecycles. Review workflows associated with your models, the current status of a model workflow, and history of a specific workflow applied to a model.
+Use workflows to transition your models into their appropriate next stages throughout your model lifecycles. Review workflows associated with your models, the current status of a model workflow, and the history of workflows applied to a model.
 
 :::{#workflows}
 :::
