--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -2,65 +2,42 @@
 title: "Quickstart — Model Development"
 date: last-modified
 page-layout: full
+listing:
+  - id: whats-next
+    type: grid
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents:
+    - ../../guide/configuration/accessing-validmind.qmd
 ---
 
-Register your first model, use the {{< var validmind.developer >}} to document a model and run tests, and edit your generated model documentation using the {{< var validmind.platform >}}.
-
-<!-- THIS IS THE OLD INFO AS A PLACEHOLDER, NEW INFO TO COME -->
+wip
 
 ::: {.attn}
 
 ## {{< fa star-of-life >}} Before you begin
 
-To try out {{< var vm.product >}}, you need to be a registered user on the {{< var validmind.platform >}}.
-
-::: {.callout}
-## Need an account for {{< var vm.product >}}?
-Signing up is FREE — {{< var link.register >}} 
-:::
+To try out {{< var vm.product >}}, you need to be a registered user on the {{< var validmind.platform >}}.[^1]
 
 :::
 
-## Steps
+## Register a model
 
-1. In a web browser, open [Quickstart for model documentation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb).
+## Set up the {{< var validmind.developer >}}
 
-   This link takes you to {{< var vm.product >}}'s JupyterHub instance where you can log in with the Auth0 credentials for your {{< var vm.product >}} account to access the **QuickStart for model documentation** notebook:
+## Work with model documentation
 
-   ![QuickStart notebook opened in JupyterHub](jupyterhub-dashboard.png){width=90% fig-alt="A screenshot showing the QuickStart notebook opened in JupyterHub" .screenshot}
+## What's next*
 
-   The notebook will guide you through installing the {{< var validmind.developer >}}, initializing the Python environment, and finally connecting the {{< var vm.developer >}} to the {{< var validmind.platform >}}.
+:::{#whats-next}
+:::
 
-2. Follow the instructions to run the first two code cells in the notebook, which will set the stage by installing and initializing {{< var vm.product >}}:[^1]
+## Learn more*
 
-   - Hover over each cell and click the {{< fa circle-play >}} **icon**; OR
-   - Press `Shift + Enter` on Windows or `Cmd + Enter` if you are on a Mac
-   
-   Under the cell at bottom of the **Initialize the ValidMind Library** section, confirm that you see a success message that looks something like this:
-   
-   ```bash
-   2024-10-08 22:06:42,610 - INFO(validmind.api_client): 🎉 Connected to {{< var vm.product >}}!
-   📊 Model: [Demo] Customer Churn Model (ID: clwqy70qd01my22ikc49paar9)
-   📁 Document Type: model_documentation
-   ```
-   
-   This message verifies that the {{< var vm.developer >}} works as expected as is connected to the correct model within the {{< var vm.platform >}}. 
-
-You can now continue running the rest of the cells if you want to see how the demo notebook works or, to save some time, you can move on to the [Explore sample model documentation](/get-started/platform/explore-sample-model-documentation.qmd) to explore the {{< var vm.platform >}}.  
-
-#### Watch the tutorial
-
-Need more help? Experience this guide in video format:
-
-{{< video https://www.youtube.com/embed/rIR8Mql7eGs?si=vnZA_zP4tAjFjI4r title='ValidMind QuickStart' >}}
-
-<!--- TO DO Screenshot --->
-
-## What's next
-
-Continue with [Explore sample model documentation](/get-started/platform/explore-sample-model-documentation.qmd) to learn more about using the {{< var validmind.platform >}} hands-on.
 
 
 <!-- FOOTNOTES -->
 
-[^1]: [Install and initialize the {{< var validmind.developer >}}](/developer/model-documentation/install-and-initialize-validmind-library.qmd)
+[^1]: [Register with {{< var vm.product >}}](/guide/configuration/register-with-validmind.qmd)
+
