--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -1,5 +1,6 @@
 ---
-title: "{{< var validmind.developer >}}"
+# USING THE VARIABLE MESSES UP THE SPACING ON THE PREVIEW TILE
+title: "ValidMind Library"
 date: last-modified
 aliases:
   - /guide/get-started-developer-framework.html
@@ -84,7 +85,7 @@ listing:
     - ../guide/model-documentation/work-with-content-blocks.qmd
 ---
 
-The {{< var validmind.developer >}} helps you streamline model documentation by automating the generation of drafts. All you need to do is upload your documentation artifacts and test results to the {{< var validmind.platform >}}.
+The {{< var validmind.developer >}} streamlines model development and validation by automating testing. Run tests, log those test results to the {{< var validmind.platform >}}, and have fully supported drafts of documentation or reporting ready for you to fine-tune.
 
 ## What is the {{< var validmind.developer >}}?
 
