--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -10,11 +10,11 @@ listing:
     sort: false
     fields: [title, description]
     contents:
+    - ../../training/developer-fundamentals/developer-fundamentals-register.qmd
     - ../../developer/validmind-library.qmd
-    - ../../guide/model-documentation/work-with-test-results.qmd
 ---
 
-wip
+Register your first model, use the {{< var validmind.developer >}} to run tests and document a model, and edit your generated model documentation using the {{< var validmind.platform >}}.
 
 ::: {.attn}
 
