Single-sourcing common steps

--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -29,34 +29,17 @@ Register your first model, use the {{< var validmind.developer >}} to run tests 
 
 The first step to using {{< var vm.product >}} to develop models is to register them in your model inventory:
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
-   
-2. Click **{{< fa plus >}} Register New Model**.
-
-3. To register a model for use with this quickstart, select:
-
-   - [what type of model is it?]{.smallcaps} — `New Model`
-   - [template]{.smallcaps} — `Binary classification`
-   - [use case]{.smallcaps} — `Attrition/Churn Management`
-
-4. Click **Register Model** to add the model to your inventory.
+{{< include /get-started/common-assets/_register-your-first-model.qmd >}}
 
 ::: {.column-margin}
 ![Registration modal with the options filled out for the model development quickstart](developer-new-model.png){width=90% fig-alt="A screenshot showing the registration modal with the options filled out for the model development quickstart" .screenshot}
 :::
 
-#### Get your code snippet
-
-Before we move on, let's also retrieve the unique *code snippet* for your model that will enable you to connect your testing environment with the correct model in the {{< var validmind.platform >}}:
-
-1. In the left sidebar that appears for your model, click **{{< fa rocket >}} Getting Started**.
-
-2. Locate the code snippet and click **{{< fa regular copy >}} Copy snippet to clipboard**.
+{{< include /get-started/common-assets/_get-your-code-snippet.qmd >}}
 
 ::: {.column-margin}
 ![{{< fa rocket >}} Getting Started page with a sample code snippet](developer-code-snippet.png){width=90% fig-alt="A screenshot showing the Getting Started page with a sample code snippet" .screenshot}
 :::
-
 
 ## Using the {{< var validmind.developer >}}
 
@@ -64,50 +47,20 @@ Next, let's set up the {{< var validmind.developer >}} in your developer environ
 
 Our companion notebook, Quickstart for model documentation,[^3] will walk you through the steps of installing the {{< var vm.developer >}} in your environment, initializing the {{< var vm.developer >}} for use, and running a full suite of documentation tests that will log the results to the {{< var validmind.platform >}}.
 
-### Access the quickstart notebook
-
-You can either load the hosted version of our notebook, or download the notebook to run in your own local environment:
-
-#### Load the hosted notebook (recommended)
-
-1. Sign in to [JupyterHub]({{< var url.jupyterhub >}}) with your {{< var vm.product >}} login.
+{{< include /get-started/common-assets/_access-quickstart-notebook.qmd >}}
 
 <!-- NOT LIVE ON JUPYTERHUB YET, HASN'T BEEN UPDATED -->
-2. Open [Quickstart for model documentation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb) and **[run the quickstart notebook](#run-the-quickstart-notebook).**
+1. Open [Quickstart for model documentation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb) and **[run the quickstart notebook](#run-the-quickstart-notebook).**
 
-#### Download the notebooks
+{{< include /get-started/common-assets/_download-notebooks.qmd >}}
 
-##### Option 1: Clone the GitHub repository
+1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and **[run the quickstart notebook](#run-the-quickstart-notebook).**
 
-1. Open a terminal or command prompt.
+{{< include /get-started/common-assets/_download-code-samples.qmd >}}
 
-2. Navigate to the directory where you want to clone the repository.
+1. Open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and **[run the quickstart notebook](#run-the-quickstart-notebook).**
 
-3. Run the following command:
-   ```bash
-   git clone https://github.com/validmind/validmind-library.git
-   ```
-
-4. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and **[run the quickstart notebook](#run-the-quickstart-notebook).**
-
-##### Option 2: Download the code samples
-
-1. Download our selection of code samples: [`notebooks.zip`](/notebooks.zip)
-
-2. Navigate to the location where you saved `notebooks.zip` and extract the contents.[^4]
-
-3. Navigate to the folder where you extracted the files.
-
-4. Open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and **[run the quickstart notebook](#run-the-quickstart-notebook).**
-
-### Run the quickstart notebook
-
-1. Follow the instructions to run the first two code cells in the notebook,[^5] which will set the stage by installing and initializing {{< var vm.product >}}:[^6]
-
-   - Hover over each cell and click the {{< fa circle-play >}} **icon**; OR
-   - Press `Shift + Enter` on Windows or `Cmd + Enter` if you are on a Mac
-
-   Under the cell at bottom of the **Get your code snippet** section, confirm that you see a success message that looks something like this:
+{{< include /get-started/common-assets/_run-quickstart-notebook.qmd >}}
    
    ```bash
    2024-10-08 22:06:42,610 - INFO(validmind.api_client): 🎉 Connected to {{< var vm.product >}}!
@@ -117,7 +70,7 @@ You can either load the hosted version of our notebook, or download the notebook
 
    This message verifies that the {{< var validmind.developer >}} works as expected as is connected to the correct model within the {{< var validmind.platform >}}. 
 
-2. Continue running the rest of the notebook to automatically populate test results for your sample model to your documentation for that model in the {{< var vm.platform >}}.
+1. Continue running the rest of the notebook to automatically populate test results for your sample model to your documentation for that model in the {{< var vm.platform >}}.
 
 ## Work with model documentation
 
@@ -125,16 +78,16 @@ After you successfully run the notebook, return to the {{< var validmind.platfor
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
 
-2. Locate or search for the model you registered for this quickstart and click on it to select it.[^7]
+2. Locate or search for the model you registered for this quickstart and click on it to select it.[^4]
 
 3. In the left sidebar that appears for the model, click **{{< fa book-open >}} Documentation**.
 
-   - Your model's documentation is broken down into sections, defined by your documentation templates.[^9]
-   - Each section can be assigned a completion status,[^10] allowing you to track the progress of your documentation.
+   - Your model's documentation is broken down into sections, defined by your documentation templates.[^5]
+   - Each section can be assigned a completion status,[^6] allowing you to track the progress of your documentation.
 
 4. Click on any section of the documentation to review the test results and drafts of test result summaries generated by the {{< var validmind.developer >}}.
 
-   In any subsection, expand the **{{< var vm.product >}} Insights™** panel to view the Documentation Guidelines[^11] that tell you more about what these sections mean and help you with the task of documenting the model as a developer.
+   In any subsection, expand the **{{< var vm.product >}} Insights™** panel to view the Documentation Guidelines[^7] that tell you more about what these sections mean and help you with the task of documenting the model as a developer.
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -168,19 +121,10 @@ Now that you've grasped the basics of using {{< var vm.product >}} for model dev
 
 [^3]: [Quickstart for model documentation](/notebooks/quickstart/quickstart_model_documentation.ipynb)
 
-[^4]: Depending on your operating system, you can right-click on `notebooks.zip` and select **Extract All ...** or **Extract Here**, for example.
+[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]:
+[^5]: [Working with documentation templates](/guide/templates/working-with-documentation-templates.qmd)
 
-   - Hover over each cell and click the {{< fa circle-play >}} **icon**; OR
-   - Press `Shift + Enter` on Windows or `Cmd + Enter` if you are on a Mac
+[^6]: [Assign documentation section statuses](/guide/model-documentation/assign-documentation-section-statuses.qmd)
 
-[^6]: [Install and initialize the {{< var validmind.developer >}}](/developer/model-documentation/install-and-initialize-validmind-library.qmd)
-
-[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^9]: [Working with documentation templates](/guide/templates/working-with-documentation-templates.qmd)
-
-[^10]: [Assign documentation section statuses](/guide/model-documentation/assign-documentation-section-statuses.qmd)
-
-[^11]: [View documentation guidelines](/guide/model-documentation/view-documentation-guidelines.qmd)
+[^7:] [View documentation guidelines](/guide/model-documentation/view-documentation-guidelines.qmd)
