--- a/site/get-started/common-assets/_run-quickstart-notebook.qmd
+++ b/site/get-started/common-assets/_run-quickstart-notebook.qmd
@@ -5,8 +5,9 @@
    - Hover over each cell and click the {{< fa circle-play >}} **icon**; OR
    - Press `Shift + Enter` on Windows or `Cmd + Enter` if you are on a Mac
 
-   Under the cell at bottom of the **Get your code snippet** section, confirm that you see a success message that looks something like this:
+1. Under the cell at bottom of the **Get your code snippet** section, confirm that you see a success message verifying that you've connected to the right model.
 
+   This message verifies that the {{< var validmind.developer >}} works as expected as is connected to the correct model within the {{< var validmind.platform >}}. 
 
 [^longnote]:
 
