--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -45,38 +45,40 @@ The first step to using {{< var vm.product >}} to develop models is to register 
 
 Next, let's set up the {{< var validmind.developer >}} in your developer environment of choice so we can use it to run and log tests, which will help automate the documentation of your models.
 
-Our companion notebook, Quickstart for model documentation,[^3] will walk you through the steps of installing the {{< var vm.developer >}} in your environment, initializing the {{< var vm.developer >}} for use, and running a full suite of documentation tests that will log the results to the {{< var validmind.platform >}}.
+Our companion notebook, **Quickstart for model documentation,**[^3] will walk you through the steps of installing the {{< var vm.developer >}} in your environment, initializing the {{< var vm.developer >}} for use, and running a full suite of documentation tests that will log the results to the {{< var validmind.platform >}}.
 
 {{< include /get-started/common-assets/_access-quickstart-notebook.qmd >}}
 
 <!-- NOT LIVE ON JUPYTERHUB YET, HASN'T BEEN UPDATED -->
-1. Open [Quickstart for model documentation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb) and **[run the quickstart notebook](#run-the-quickstart-notebook).**
+1. Open [Quickstart for model documentation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb) and [run the quickstart notebook](#run-the-quickstart-notebook).
 
 {{< include /get-started/common-assets/_download-notebooks.qmd >}}
 
-1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and **[run the quickstart notebook](#run-the-quickstart-notebook).**
+1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and [run the quickstart notebook](#run-the-quickstart-notebook).
 
 {{< include /get-started/common-assets/_download-code-samples.qmd >}}
 
-1. Open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and **[run the quickstart notebook](#run-the-quickstart-notebook).**
+1. Open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and [run the quickstart notebook](#run-the-quickstart-notebook).
 
 {{< include /get-started/common-assets/_run-quickstart-notebook.qmd >}}
-   
-   ```bash
-   2024-10-08 22:06:42,610 - INFO(validmind.api_client): 🎉 Connected to {{< var vm.product >}}!
-   📊 Model: [ValidMind] Model development quickstart (ID: cmalgf3qi02ce199qm3rdkl46)
-   📁 Document Type: model_documentation
-   ```
 
-   This message verifies that the {{< var validmind.developer >}} works as expected as is connected to the correct model within the {{< var validmind.platform >}}. 
+::: {.column-margin}
+Example success message:
 
-1. Continue running the rest of the notebook to automatically populate test results for your sample model to your documentation for that model in the {{< var vm.platform >}}.
+```bash
+2024-10-08 22:06:42,610 - INFO(validmind.api_client): 🎉 Connected to {{< var vm.product >}}!
+📊 Model: [ValidMind] Model development quickstart (ID: cmalgf3qi02ce199qm3rdkl46)
+📁 Document Type: model_documentation
+```
+:::
+
+3. Continue running the rest of the notebook to automatically populate test results for your sample model to your documentation for that model in the {{< var vm.platform >}}.
 
 ## Work with model documentation
 
 After you successfully run the notebook, return to the {{< var validmind.platform >}}:
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 2. Locate or search for the model you registered for this quickstart and click on it to select it.[^4]
 
@@ -113,6 +115,7 @@ Now that you've grasped the basics of using {{< var vm.product >}} for model dev
 :::{#whats-next}
 :::
 
+
 <!-- FOOTNOTES -->
 
 [^1]: [Register with {{< var vm.product >}}](/guide/configuration/register-with-validmind.qmd)
@@ -127,4 +130,4 @@ Now that you've grasped the basics of using {{< var vm.product >}} for model dev
 
 [^6]: [Assign documentation section statuses](/guide/model-documentation/assign-documentation-section-statuses.qmd)
 
-[^7:] [View documentation guidelines](/guide/model-documentation/view-documentation-guidelines.qmd)
+[^7]: [View documentation guidelines](/guide/model-documentation/view-documentation-guidelines.qmd)
