Broken link cleanup

--- a/site/about/overview-model-documentation.qmd
+++ b/site/about/overview-model-documentation.qmd
@@ -9,9 +9,9 @@ listing:
   grid-columns: 2
   # image-height: 100%
   contents:
-    - path: ../get-started/quickstart.qmd
-      title: "QuickStart"
-      description: "Our QuickStart is the quickest and easiest way to try out our product features."
+    - path: ../get-started/get-started.qmd
+      title: "Get started"
+      description: "Our quickstarts are the quickest and easiest way to try out our product features."
   fields: [title, description, reading-time]
 ---
 
