--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -62,7 +62,8 @@ If additional fields are required on model registration for your organization:
 ## What's next
 
 - [Edit model inventory fields](edit-model-inventory-fields.qmd)
-- [Generate documentation for your model](/get-started/platform/generate-documentation-for-your-model.qmd)
+- [Customize model inventory layout](/guide/model-inventory/customize-model-inventory-layout.qmd)
+- [Customize model overview page](/guide/model-inventory/customize-model-overview-page.qmd)
 
 
 <!-- FOOTNOTES -->
