--- a/site/releases/2023/2023-oct-25/highlights.qmd
+++ b/site/releases/2023/2023-oct-25/highlights.qmd
@@ -235,7 +235,7 @@ We updated the QuickStart section of our documentation to reflect recent {{< var
 :::
 
 ::: {.w-20-ns .tc}
-[QuickStart](/get-started/quickstart.qmd){.button}
+[Quickstart — Model Development](/get-started/developer/quickstart-developer.qmd){.button}
 
 :::
 
