--- a/site/releases/2023/release-notes-2023-jun-22.qmd
+++ b/site/releases/2023/release-notes-2023-jun-22.qmd
@@ -106,7 +106,7 @@ We revised our QuickStart guide to be more modular and to highlight that our sug
 :::
 
 ::: {.w-20-ns .tc}
-[QuickStart](/get-started/quickstart.qmd){.button}
+[Quickstart — Model Development](/get-started/developer/quickstart-developer.qmd){.button}
 
 :::
 
