--- a/site/releases/2024/2024-mar-27/highlights.qmd
+++ b/site/releases/2024/2024-mar-27/highlights.qmd
@@ -431,18 +431,18 @@ The user guide sections for working with model documentation and preparing valid
 ::::
 
 <!---Replace Docker QuickStart with local one by @nrichers in [#157](https://github.com/validmind/documentation/pull/157)--->
-#### New QuickStart for local developer environments
+#### New quickstart for local developer environments
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-60-ns}
-- A new QuickStart is available for first-time users that shows you how to run our introductory Jupyter Notebook locally in your own developer environment. 
-- We also removed the option to try out {{< var vm.product >}} in Docker. JupyterHub and Google Colab remain available as other QuickStart options to try.
+- Quickstart information is now available for first-time users that shows you how to run our introductory Jupyter Notebook locally in your own developer environment.
+- We also removed the option to try out {{< var vm.product >}} in Docker. JupyterHub remains available as another quickstart option to try.
 :::
 
 ::: {.w-40-ns}
 
-[Try it in your own developer environment](/get-started/developer/try-in-your-own-environment.qmd){.button}
+[Quickstart — Model Development](/get-started/developer/quickstart-developer.qmd){.button}
 
 :::
 
