--- a/site/releases/_how-to-upgrade.qmd
+++ b/site/releases/_how-to-upgrade.qmd
@@ -15,8 +15,8 @@ To upgrade the {{< var validmind.developer >}}:^[[{{< var validmind.developer >}
 
 1. In your Jupyter Notebook:
 
-    - **Using JupyterHub:**^[[Try it with JupyterHub](/get-started/developer/try-with-jupyterhub.qmd)] Hard refresh your browser tab.
-    - **In your own developer environment**:^[[Try it in your own developer environment](/get-started/developer/try-in-your-own-environment.html)] Restart your notebook.
+    - **Using JupyterHub:** Hard refresh your browser tab.
+    - **In your own developer environment**: Restart your notebook.
 
 2. Then within a code cell or your terminal, run:
 
